--- a/pages/index.html
+++ b/pages/index.html
@@ -8,17 +8,16 @@
     <link rel="stylesheet" href="style/style.css">
     <link href="https://fonts.googleapis.com/css?family=Alatsi|Roboto:400,700&display=swap&subset=latin-ext" rel="stylesheet">
     
-    <title>Projekt_1</title>
+    <title>Tebijskie rozmówki</title>
 </head>
 <body>
     <section class="header">
         <h1>Tebijskie rozmówki</h1>
-        <p>Wprowadź swój kryptonim i zacznij rozmowę z innym losowym Tebijczykiem, lub dołącz do wybranego pomieszczenia poniżej.</p>
+        <p>Wprowadź swój kryptonim i dołącz do wybranego pomieszczenia poniżej.</p>
     </section>
 
    <section class="maininput">
     <input type="text" id="nick" placeholder="wprowadź kryptonim...">
-    <button onclick="redirectToChat('general')">Potwierdź</button>
    </section>
 
    <section class="rooms-header">   
@@ -28,9 +27,9 @@
    <section class="rooms">
     <div class="img img1" onclick="redirectToChat('kantyna')"><div class="img-overlay"></div><h3>kantyna</h3></div>
     <div class="img img2" onclick="redirectToChat('palarnia')"><div class="img-overlay"></div><h3>palarnia</h3></div>
-    <div class="img img3" onclick="redirectToChat('ex-bochen')"><div class="img-overlay"></div><h3>ex-bochen</h3></div>
+    <div class="img img3" onclick="redirectToChat('exbochen')"><div class="img-overlay"></div><h3>ex-bochen</h3></div>
     <div class="img img4" onclick="redirectToChat('toaleta')"><div class="img-overlay"></div><h3>toaleta na 4</h3></div>
-    <div class="img img5" onclick="redirectToChat('kantyna')"><div class="img-overlay"></div><h3>kantyna</h3></div>
+    <div class="img img5" onclick="redirectToChat('garaze')"><div class="img-overlay"></div><h3>garaże</h3></div>
    </section>
 </body>
 <script src="js/socket.io.js"></script>
