--- a/pages/chat.html
+++ b/pages/chat.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./style/chat.css">
+    <link rel="icon" href="img/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Alatsi|Roboto:400,700&display=swap&subset=latin-ext" rel="stylesheet">
     <title>Chat</title>
 </head>
