1on1 and nickname validation

--- a/pages/index.html
+++ b/pages/index.html
@@ -13,11 +13,12 @@
 <body>
     <section class="header">
         <h1>Tebijskie rozmówki</h1>
-        <p>Wprowadź swój kryptonim i dołącz do wybranego pomieszczenia poniżej.</p>
+        <p>Wprowadź swój kryptonim, dołącz do rozmowy jeden na jeden lub dołącz do wybranego pomieszczenia poniżej.</p>
     </section>
 
    <section class="maininput">
     <input type="text" id="nick" placeholder="wprowadź kryptonim...">
+    <button onclick="join1on1()">Rozmowa 1 na 1</button>
    </section>
 
    <section class="rooms-header">   
